Just rechange register

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="public/img/Logo-1.avif" />
+    <link rel="icon" type="image" href="src/img/Logo-1.avif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
   </head>
